fix settings group on mobile when menu is open

--- a/packages/@coorpacademy-components/src/organism/mooc-header/style.css
+++ b/packages/@coorpacademy-components/src/organism/mooc-header/style.css
@@ -668,6 +668,10 @@
     padding: 0;
   }
 
+  .open .settingsGroup {
+    width: 100%;
+  }
+
   .closeSettings {
     display: none;
   }
